# Saqr-MCP

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/: client.py  groq_client.py  ollama_client.py  server.py
src/clients/: groq_client.py  ollama_client.py
src/core/: logger.py
src/servers/: saqr_server.py
