[project]
name = "saqr-mcp"
version = "0.1.0"
description = "Saqr-MCP is a Python application that implements the Model Context Protocol (MCP) to enable AI assistant capabilities with local models"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckduckgo-search==8.0.1",
    "fastapi>=0.115.12",
    "groq==0.24.0",
    "htmldocx==0.0.6",
    "httpx==0.28.1",
    "loguru==0.7.3",
    "markdown>=3.8",
    "mcp[cli]==1.7.1",
    "mem0ai>=0.1.103",
    "ollama==0.4.8",
    "python-docx>=1.1.2",
    "tavily-python==0.7.2",
    "uvicorn>=0.34.2",
]
